added localized default value XPATH_RESULTS

--- a/src/main/resources/org/adwmainz/da/extensions/askmore/resources/ArgumentTextBundle.properties
+++ b/src/main/resources/org/adwmainz/da/extensions/askmore/resources/ArgumentTextBundle.properties
@@ -4,3 +4,4 @@ COPIED_TO_CLIPBOARD=Copied the selection to the system's clipboard
 ELEMENT_FOUND=Element found
 EXECUTE_ACTION=Execute action
 NO_RESULT_MESSAGE=The action returned no results
+XPATH_RESULTS=XPath results
